# music-widgets

./: .gitignore  Cargo.toml  build.rs  infloresce.glsl  test.json
src/: beat_indicator.rs  format.rs  live_state.rs  loaded_project.rs  loaded_shader.rs  main.rs  music_state.rs  music_theory.rs  music_widgets_state.rs  project.rs  rendering_state.rs  shader_param.rs  track_info.rs  ui.rs  user_track_info.rs  widgets.rs
src/music_theory/: accidental.rs  chord.rs  note.rs  note_name.rs  time_signature.rs
src/ui/: main_menu.rs  shader_params_editor.rs
src/widgets/: beat_indicator.rs
