[package]
name = "music-widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
glam = "0.24.2"
micro = { git = "https://github.com/tesselode/micro", rev = "ec55f22" }
palette = "0.7.3"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"

[build-dependencies]
embed-manifest = "1.3.1"
