[package]
name = "music-widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
egui = "0.23.0"
glam = "0.24.2"
micro = { git = "https://github.com/tesselode/micro", rev = "3c9c0c7" }
palette = "0.7.3"
regex = "1.10.2"
rfd = "0.12.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[build-dependencies]
embed-manifest = "1.3.1"
