[package]
name = "music-widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
egui = "0.24.0"
glam = "0.24.2"
kira = "0.8.5"
micro = { git = "https://github.com/tesselode/micro", rev = "c4353d7" }
palette = { version = "0.7.3", features = ["serializing"] }
regex = "1.10.2"
rfd = "0.12.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"

[build-dependencies]
embed-manifest = "1.3.1"

[features]
sdl2_bundled = ["micro/sdl2_bundled"]

[profile.dev]
opt-level = 3
